--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello world
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title></title>
+</head>
+<body>
+    <h1>Sample Title<h1>
+    <p> something here
+</body>
+</html>>
+
